Fix spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,7 +18,7 @@ ul {
     @apply ms-8;
 
     li {
-        @apply my-1;
+        @apply my-2;
         @apply ps-1;
     }
 }
@@ -28,7 +28,7 @@ ol {
     @apply ms-8;
 
     li {
-        @apply my-1;
+        @apply my-2;
         @apply ps-1;
     }
 }
